--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,28 @@
     Web Chat
   </title>
 
+
   <!-- bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- font-awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <!-- materialdesignicons -->
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
+
+  <style>
+    .bounce-btn {
+    transition: transform 0.1s ease;
+    /* Hiệu ứng chuyển đổi khi phóng to trở lại */
+}
+
+.bounce-btn:active {
+    transform: scale(0.9);
+    /* Nút sẽ nhỏ lại khi được nhấn */
+}
+  </style>
 </head>
 
 <body>
